crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__fn_typed_params.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn add(a: Number, b: Number) Number { a + b }"
---
FnDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 4,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
        value: "add",
    },
    params: [
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 11,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 17,
                                        },
                                    },
                                    value: "Number",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            ),
        },
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 19,
                    },
                    end: Position {
                        line: 1,
                        column: 20,
                    },
                },
                value: Var(
                    "b",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 22,
                        },
                        end: Position {
                            line: 1,
                            column: 28,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 22,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 28,
                                        },
                                    },
                                    value: "Number",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            ),
        },
    ],
    ret: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 30,
                },
                end: Position {
                    line: 1,
                    column: 36,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 30,
                                },
                                end: Position {
                                    line: 1,
                                    column: 36,
                                },
                            },
                            value: "Number",
                        },
                    ],
                },
                args: [],
            },
        },
    ),
    where_clause: [],
    body: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 37,
                },
                end: Position {
                    line: 1,
                    column: 46,
                },
            },
            value: Block {
                stmts: [],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 39,
                            },
                            end: Position {
                                line: 1,
                                column: 44,
                            },
                        },
                        value: BinOps {
                            operands: [
                                BinOpOperand {
                                    expr: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 39,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 40,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                    op: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 41,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 42,
                                            },
                                        },
                                        value: Add,
                                    },
                                },
                            ],
                            last: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 43,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 44,
                                    },
                                },
                                value: Var(
                                    "b",
                                ),
                            },
                        },
                    },
                ),
            },
        },
    ),
}
