crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__fn_where_assoc.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn sum(it: i) Number where i: Iterator, i.Item == Number {\n    0\n}\n"
---
FnDecl {
    is_async: false,
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 4,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
        value: "sum",
    },
    params: [
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: Var(
                    "it",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 12,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: Var {
                        name: "i",
                        args: [],
                    },
                },
            ),
        },
    ],
    ret: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 15,
                },
                end: Position {
                    line: 1,
                    column: 21,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 15,
                                },
                                end: Position {
                                    line: 1,
                                    column: 21,
                                },
                            },
                            value: "Number",
                        },
                    ],
                },
                args: [],
            },
        },
    ),
    where_clause: [
        Bound {
            var: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 28,
                    },
                    end: Position {
                        line: 1,
                        column: 29,
                    },
                },
                value: "i",
            },
            bounds: [
                Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 31,
                                },
                                end: Position {
                                    line: 1,
                                    column: 39,
                                },
                            },
                            value: "Iterator",
                        },
                    ],
                },
            ],
        },
        AssocEq {
            var: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 41,
                    },
                    end: Position {
                        line: 1,
                        column: 42,
                    },
                },
                value: "i",
            },
            assoc: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 43,
                    },
                    end: Position {
                        line: 1,
                        column: 47,
                    },
                },
                value: "Item",
            },
            typ: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 51,
                    },
                    end: Position {
                        line: 1,
                        column: 57,
                    },
                },
                value: Named {
                    path: Path {
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 51,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 57,
                                    },
                                },
                                value: "Number",
                            },
                        ],
                    },
                    args: [],
                },
            },
        },
    ],
    body: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 58,
                },
                end: Position {
                    line: 3,
                    column: 2,
                },
            },
            value: Block {
                stmts: [],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 6,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 0.0,
                                text: "0",
                            },
                        ),
                    },
                ),
            },
        },
    ),
}
