crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__fn_where_multi.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn show2(a: a, b: b) String where a: Show, b: Show {\n    show(a)\n}\n"
---
FnDecl {
    is_async: false,
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 4,
            },
            end: Position {
                line: 1,
                column: 9,
            },
        },
        value: "show2",
    },
    params: [
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    value: Var {
                        name: "a",
                        args: [],
                    },
                },
            ),
        },
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 16,
                    },
                    end: Position {
                        line: 1,
                        column: 17,
                    },
                },
                value: Var(
                    "b",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 19,
                        },
                        end: Position {
                            line: 1,
                            column: 20,
                        },
                    },
                    value: Var {
                        name: "b",
                        args: [],
                    },
                },
            ),
        },
    ],
    ret: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 22,
                },
                end: Position {
                    line: 1,
                    column: 28,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 22,
                                },
                                end: Position {
                                    line: 1,
                                    column: 28,
                                },
                            },
                            value: "String",
                        },
                    ],
                },
                args: [],
            },
        },
    ),
    where_clause: [
        Bound {
            var: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 35,
                    },
                    end: Position {
                        line: 1,
                        column: 36,
                    },
                },
                value: "a",
            },
            bounds: [
                Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 38,
                                },
                                end: Position {
                                    line: 1,
                                    column: 42,
                                },
                            },
                            value: "Show",
                        },
                    ],
                },
            ],
        },
        Bound {
            var: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 44,
                    },
                    end: Position {
                        line: 1,
                        column: 45,
                    },
                },
                value: "b",
            },
            bounds: [
                Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 47,
                                },
                                end: Position {
                                    line: 1,
                                    column: 51,
                                },
                            },
                            value: "Show",
                        },
                    ],
                },
            ],
        },
    ],
    body: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 52,
                },
                end: Position {
                    line: 3,
                    column: 2,
                },
            },
            value: Block {
                stmts: [],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 12,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 9,
                                    },
                                },
                                value: Var(
                                    "show",
                                ),
                            },
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 10,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 11,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            ],
                        },
                    },
                ),
            },
        },
    ),
}
