crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__fn_where_multiline_trailing_comma.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn traverse(xs: t[f[a]], g: fn(a) f[b]) f[t[b]]\n    where\n        t: Traversable,\n        f: Applicative,\n"
---
FnDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 4,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "traverse",
    },
    params: [
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 13,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: Var(
                    "xs",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 17,
                        },
                        end: Position {
                            line: 1,
                            column: 24,
                        },
                    },
                    value: Var {
                        name: "t",
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 23,
                                    },
                                },
                                value: Var {
                                    name: "f",
                                    args: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 22,
                                                },
                                            },
                                            value: Var {
                                                name: "a",
                                                args: [],
                                            },
                                        },
                                    ],
                                },
                            },
                        ],
                    },
                },
            ),
        },
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 26,
                    },
                    end: Position {
                        line: 1,
                        column: 27,
                    },
                },
                value: Var(
                    "g",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 29,
                        },
                        end: Position {
                            line: 1,
                            column: 39,
                        },
                    },
                    value: Fn {
                        params: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 32,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 33,
                                    },
                                },
                                value: Var {
                                    name: "a",
                                    args: [],
                                },
                            },
                        ],
                        ret: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 35,
                                },
                                end: Position {
                                    line: 1,
                                    column: 39,
                                },
                            },
                            value: Var {
                                name: "f",
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 37,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 38,
                                            },
                                        },
                                        value: Var {
                                            name: "b",
                                            args: [],
                                        },
                                    },
                                ],
                            },
                        },
                    },
                },
            ),
        },
    ],
    ret: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 41,
                },
                end: Position {
                    line: 1,
                    column: 48,
                },
            },
            value: Var {
                name: "f",
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 43,
                            },
                            end: Position {
                                line: 1,
                                column: 47,
                            },
                        },
                        value: Var {
                            name: "t",
                            args: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 45,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 46,
                                        },
                                    },
                                    value: Var {
                                        name: "b",
                                        args: [],
                                    },
                                },
                            ],
                        },
                    },
                ],
            },
        },
    ),
    where_clause: [
        Bound {
            var: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 10,
                    },
                },
                value: "t",
            },
            bounds: [
                Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 12,
                                },
                                end: Position {
                                    line: 3,
                                    column: 23,
                                },
                            },
                            value: "Traversable",
                        },
                    ],
                },
            ],
        },
        Bound {
            var: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 9,
                    },
                    end: Position {
                        line: 4,
                        column: 10,
                    },
                },
                value: "f",
            },
            bounds: [
                Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 12,
                                },
                                end: Position {
                                    line: 4,
                                    column: 23,
                                },
                            },
                            value: "Applicative",
                        },
                    ],
                },
            ],
        },
    ],
    body: None,
}
